--- a/overwolf-ltcrabbit/package.json
+++ b/overwolf-ltcrabbit/package.json
@@ -1,7 +1,7 @@
 {
     "name": "overwolf-ltcrabbit",
     "description": "Overwolf LTCRabbit Monitor",
-    "version": "2.0.1",
+    "version": "2.0.0",
     "author": {
         "name": "Alexander Zykov",
         "email": "tigernwh@gmail.com"
@@ -10,7 +10,7 @@
     "devDependencies": {
         "util": "~0.10.3",
         "debug": "~1.0.2",
-        "handlebars": "*",
+        "handlebars": "~1.3.0",
         "three": ">=0.67.0",
         "tween.js": "~0.14.0",
         "jquery": "~1.11.1",
@@ -30,7 +30,7 @@
         "grunt-contrib-stylus": "*",
         "grunt-contrib-cssmin": "*",
         "grunt-contrib-copy": "*",
-        "grunt-contrib-handlebars": "*",
+        "grunt-contrib-handlebars": "~0.8.0",
         "grunt-zip": "*",
         "grunt-contrib-watch": "*",
         "grunt-cli": "*",
