--- a/overwolf-ltcrabbit/package.json
+++ b/overwolf-ltcrabbit/package.json
@@ -1,7 +1,7 @@
 {
     "name": "overwolf-ltcrabbit",
     "description": "Overwolf LTCRabbit Monitor",
-    "version": "2.0.0",
+    "version": "2.1.0",
     "author": {
         "name": "Alexander Zykov",
         "email": "tigernwh@gmail.com"
@@ -31,6 +31,7 @@
         "grunt-contrib-cssmin": "*",
         "grunt-contrib-copy": "*",
         "grunt-contrib-handlebars": "~0.8.0",
+        "grunt-json": "*",
         "grunt-zip": "*",
         "grunt-contrib-watch": "*",
         "grunt-cli": "*",
