--- a/overwolf-ltcrabbit/package.json
+++ b/overwolf-ltcrabbit/package.json
@@ -3,26 +3,26 @@
     "description": "Overwolf LTCRabbit Monitor",
     "version": "2.1.0",
     "author": {
-        "name": "Alexander Zykov",
-        "email": "tigernwh@gmail.com"
+        "name": "Aleksandr Zykov",
+        "email": "info@plexrayinc.com"
     },
     "private": true,
     "devDependencies": {
-        "util": "~0.10.3",
-        "debug": "~1.0.2",
-        "handlebars": "~1.3.0",
-        "three": ">=0.67.0",
-        "tween.js": "~0.14.0",
-        "jquery": "~1.11.1",
-        "lodash": "~2.4.1",
-        "font-awesome": "~4.1.0",
+        "util": "~0.10",
+        "debug": "~2.1",
+        "handlebars": "~2.0",
+        "three": "~0.68",
+        "tween.js": "~0.14",
+        "jquery": "~2.1",
+        "lodash": "~2.4",
+        "font-awesome": "~4.2",
         "winreg": "~0.0.12",
         "nib": "*",
         "stylus": "*",
         "fluidity": "*",
-        "browserify": "~4.1.11",
-        "browserify-shim": "~3.6.0",
-        "grunt": "~0.4.5",
+        "browserify": "~6.2",
+        "browserify-shim": "~3.8",
+        "grunt": "~0.4",
         "grunt-parallel": "*",
         "grunt-browserify": "*",
         "grunt-contrib-jshint": "*",
@@ -30,12 +30,13 @@
         "grunt-contrib-stylus": "*",
         "grunt-contrib-cssmin": "*",
         "grunt-contrib-copy": "*",
-        "grunt-contrib-handlebars": "~0.8.0",
+        "grunt-contrib-handlebars": "~0.9",
         "grunt-json": "*",
         "grunt-zip": "*",
         "grunt-contrib-watch": "*",
         "grunt-cli": "*",
-        "load-grunt-tasks": "*"
+        "load-grunt-tasks": "*",
+        "node-dependencies": "*"
     },
     "scripts": {
         "install": "node node_modules/grunt-cli/bin/grunt",
